--- a/HW2/hw2_solutions_ma.lyx
+++ b/HW2/hw2_solutions_ma.lyx
@@ -482,7 +482,7 @@ tiny
 
 
 \backslash
-lstinputlisting{compute_residue.m}
+lstinputlisting{compute_misfit.m}
 \end_layout
 
 \begin_layout Plain Layout
